Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14471 closed bug (fixed)

DriveSetup BFS query tooltip is too long

Reported by: ahwayakchih Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Kits/Interface Kit Version: R1/Development
Keywords: tooltip, bfs Cc:
Blocked By: Blocking:
Platform: All

Description

When formatting partition to BFS, "Enable query support" tooltip may be too long for screen resolution (see attached screenshot).

Here it's 1152x864, with font sizes set to 18 in Appearance preferences.

Maybe it would be better to split text into more lines? Or maybe BTextToolTip should handle that automatically (either by animating line back and forth, so user can read whole thing, or by forcing wrapping when it becomes wider than screen)?

Attachments (1)

DriveSetup-query-hint-text-is-too-long.png (101.0 KB ) - added by ahwayakchih 6 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by stippi, 6 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev52752. That's only for the English default locale, though. If some translations had similar problems, they need to be fixed as well, or will be going forward.

comment:2 by axeld, 6 years ago

Looks like a general problem with tooltips, though, that deserves to be fixed, too.

comment:3 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.