Apps:Drivesetup Fix for bug #14471

* Additional newline in tooltip text to prevent clipping on low
  resolution displays

Change-Id: I8262256d2eb1cc72fb5ffe502c3112285b4f46e5
Reviewed-on: https://review.haiku-os.org/c/878
Reviewed-by: Stephan Aßmus <superstippi@gmx.de>